FULL-STUDY/gatewayapi/dpl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: depl-gateway
  namespace: for-gatewayapi
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.26.0
