FULL-STUDY/gatewayapi/svc-clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-cluster
  namespace: for-gatewayapi
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
