FULL-STUDY/gatewayapi/httprounte.yml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: httproute
  namespace: for-gatewayapi
spec:
  parentRefs:
    - name: gateway
  hostnames:
    - "test.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: nginx-Cluster
          kind: Service
          port: 80
##HTTPRoute = where traffic goes inside the cluster
